# EpitechMath

301danone/: .gitignore  301danone  algo.py
301danone/bonus/: 301danone  algo.py  decorateur.py  gen.py  var.py
301danone/file/: 0_5k  1  10  100  100k  10k  1k  20  20k  2k  30k  3k  4  40k  4k  5  50k  5k  651_0  651_h  6k  7k  8k  9k  test_wrong
302poignees/: 302poignees  define.py  matrice.py  utils.py
302poignees/file/: dif  exemple  exemple2  exemple3  exemple4  exemple5
303make/: 303make  graph_search.py  matrice.py  utils.py  var.py
303make/file/: exemple_cours  test
304pacman/: .gitignore  304pacman  algo.py  pair.py  utils.py  var.py
304pacman/file/: 304pacman_15x15  304pacman_15x15_+_-_0_0_REF  304pacman_47x47-sans-mur-autour_+_-_0_0_REF  304pacman_presque-pas-de-mur_+_-_0_0_REF  impossible  not_a_square  too_few_fantom  too_few_player  wrong_letter
305chantier/: 305chantier  algo.py  utils.py  var.py
305chantier/file/: test.csv
307cereales/: .gitignore  307cereales  algo.py  t  taet  utils.py
307cereales/test/: local2  result1  result2
308pipeaux/: .gitignore  308pipeaux  algo.py  utils.py  verbose.py
308pipeaux/bonus/: graph
discriminator/: .gitignore  CMakeLists.txt  mymake
discriminator/file/: add_nuage  gen.py  gen_square.py  graph  map2  map3  map4  map5  map_3_nuage
discriminator/src/: main.cpp
discriminator/src/algo/: algo.cpp  algo.hh
discriminator/src/core/: core.cpp  core.hh
discriminator/src/core/quadtree/: QuadTree.cpp  QuadTree.hh
discriminator/src/loader/: mapLoader.cpp  mapLoader.hh
